--- a/functions/package.json
+++ b/functions/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.11",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^4.9.0"
   },
